--- a/style.css
+++ b/style.css
@@ -6,9 +6,26 @@
 
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    font-family: monospace;
+}
+
+h1{
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.games-infos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    @media screen and (max-width:768px){
+        flex-direction: column;
+    }
 }
 
 section{
@@ -16,17 +33,27 @@ section{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 20px;
+    @media screen and (max-width:768px) {
+        gap: 10px;
+    }
 }
 
 article{
-    width: 150px;
-    height: 150px;
-    border: 3px solid #000;
+    width: 125px;
+    height: 125px;
+    border: 3px solid #000000;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     border-radius: 10px;
+}
+
+@media screen and (max-width:768px) {
+    article{
+        width: 70px;
+        height: 70px;
+    }
 }
 
 img{
@@ -39,4 +66,29 @@ img{
 
 .show img{
     opacity: 1;
+}
+
+.found{
+    box-shadow: 5px 5px 5px #35568c,
+                -5px -5px 5px #35568c,
+                5px -5px 5px #35568c,
+                -5px 5px 5px #35568c;
+    transition: all 200ms ease-in;
+}
+
+button{
+    margin-top: 20px;
+    border: solid 1px #000;
+    background: #fff;
+    font-family: monospace;
+    padding: 10px 15px;
+    transition: all 200ms ease-in;
+    border-radius: 5px;
+}
+
+button:hover{
+    box-shadow: 5px 5px 5px #35568c,
+                -5px -5px 5px #35568c,
+                5px -5px 5px #35568c,
+                -5px 5px 5px #35568c;
 }
